--- a/src/App.css
+++ b/src/App.css
@@ -52,27 +52,33 @@ body {
 .CalcDisplay {
   display: flex;
   flex: 0 1 100%;
-  border: 1px solid black;
+  border: 1px #000;
   height: 100px;
   font-size: 2em;
+  font-family: 'Roboto', sans-serif;
   align-items: center;
   padding: 0 10px;
-  background: black;
-  color: #fff;
+  background: #1F51FF;
+  color: #000;
   justify-content: flex-end;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
 }
 
 .ButtonContainer {
   display: flex;
   flex: 0 1 100%;
   flex-wrap: wrap;
-  
+  background-color: #f2f2f2;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  margin: 20px;
 }
 
 .Calculator {
   display: flex;
   flex: 0 1 25%;
-  font-size: 2em;
+   font-size: 2.5em;
   justify-content: center;
-  background: lightergray;
+  background: navajowhite;
 }
