--- a/src/App.css
+++ b/src/App.css
@@ -51,7 +51,7 @@ body {
 
 .CalcDisplay {
   display: flex;
-  flex: 0 1 100%;
+  flex: 10 1 90%;
   border: 1px #000;
   height: 100px;
   font-size: 2em;
@@ -71,11 +71,11 @@ body {
   flex-wrap: wrap;
   background-color: #f2f2f2;
   border-radius: 10px;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  box-shadow: 0 4px 15px 0 rgba(0, 0, 0, 0.2);
   margin: 20px;
 }
 
-.Calculator {
+.CalculatorBtn {
   display: flex;
   flex: 0 1 25%;
    font-size: 2.5em;
