--- a/src/App.css
+++ b/src/App.css
@@ -1,84 +1,11 @@
-.App {
-  text-align: center;
-}
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-body {
-  display: flex;
-  justify-content: center;
-  align-items: flex-start;
+.Mendoza {
+  width: 200px; 
+  height: auto;
+  border-radius: 10%; 
+  margin-right: 50px;
+  margin-bottom: 50px;
+  background: orange;
 }
 
 
-.Calculator {
-  display: flex;
-  flex-wrap: wrap;
-}
-
-.CalcDisplay {
-  display: flex;
-  flex: 10 1 90%;
-  border: 1px #000;
-  height: 100px;
-  font-size: 2em;
-  font-family: 'Roboto', sans-serif;
-  align-items: center;
-  padding: 0 10px;
-  background: #1F51FF;
-  color: #000;
-  justify-content: flex-end;
-  border-radius: 10px;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-}
-
-.ButtonContainer {
-  display: flex;
-  flex: 0 1 100%;
-  flex-wrap: wrap;
-  background-color: #f2f2f2;
-  border-radius: 10px;
-  box-shadow: 0 4px 15px 0 rgba(0, 0, 0, 0.2);
-  margin: 20px;
-}
-
-.CalculatorBtn {
-  display: flex;
-  flex: 0 1 25%;
-   font-size: 2.5em;
-  justify-content: center;
-  background: navajowhite;
-}
