--- a/src/App.css
+++ b/src/App.css
@@ -1,73 +1,78 @@
-body {
-  max-width: 500px;
-  margin: auto;
-}
-
-.Mendoza {
-  height: 500px;
-  line-height: 500px;
-  margin:auto;
+.App {
   text-align: center;
-  background-color: #FF9500;
-  border: 1px solid #1C1C1C;
 }
 
-.Mendoza2 {
+.App-logo {
+  height: 40vmin;
+  pointer-events: none;
+}
+
+@media (prefers-reduced-motion: no-preference) {
+  .App-logo {
+    animation: App-logo-spin infinite 20s linear;
+  }
+}
+
+.App-header {
+  background-color: #282c34;
+  min-height: 100vh;
   display: flex;
   flex-direction: column;
-  height: 500px;
-}
-
-.Mendoza2 > div {
-  flex: 100%;
-}
-
-.item5 { grid-area: five; }
-.item6 { grid-area: six; }
-.item7 { grid-area: seven; }
-.item8 { grid-area: eight; }
-
-.grid-container {
-  display: grid;
-  grid-template-areas: "five six seven seven"
-                      "five six seven seven"
-                      "five six eight eight"
-                      "five six eight eight";
-  background-color: #2196F3;
-}
-
-.grid-container > div {
-  font-size: 40px;
-  background-color: blueviolet;
-  margin: 1px;
-  display: grid;
-  justify-content: center;
   align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  color: white;
 }
 
-.flex-container {
-  display: flex;
-  background-color: #2196F3;
+.App-link {
+  color: #61dafb;
 }
 
-.flex-container-left {
-  flex-direction: column;
-  display: flex;
-  flex: 1;
+@keyframes App-logo-spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
 }
 
-.flex-container-right {
-  display: flex;
-  flex-direction: row;
-  flex: 1;
-}
-
-.flex-container > div > div {
-  flex: 1;
-  font-size: 40px;
-  background-color: blueviolet;
-  margin: 1px;
+body {
   display: flex;
   justify-content: center;
+  align-items: flex-start;
+}
+
+
+.Calculator {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.CalcDisplay {
+  display: flex;
+  flex: 0 1 100%;
+  border: 1px solid black;
+  height: 100px;
+  font-size: 2em;
   align-items: center;
+  padding: 0 10px;
+  background: black;
+  color: #fff;
+  justify-content: flex-end;
+}
+
+.ButtonContainer {
+  display: flex;
+  flex: 0 1 100%;
+  flex-wrap: wrap;
+  
+}
+
+.Calculator {
+  display: flex;
+  flex: 0 1 25%;
+  font-size: 2em;
+  justify-content: center;
+  background: lightergray;
 }
